# faster-whisper-hotkey

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini  requirements.txt  test_debounce.py  transcribe_microphone.py
doc/: onboarding.md
docs/: onboarding.md  speed.md
src/faster_whisper_hotkey/: __init__.py  __main__.py  available_languages.json  available_models_languages.json  config.py  llm_corrector.py  models.py  paste.py  settings.py  terminal.py  transcribe.py  transcriber.py  ui.py
temp/doc/: onboarding.md
tests/: __init__.py  conftest.py  test_clipboard.py  test_config.py  test_config_extended.py  test_headless_config.py  test_llm_corrector.py  test_model_all_configs.py  test_models.py  test_models_extended.py  test_paste.py  test_settings.py  test_terminal.py  test_transcribe.py  test_ui.py  test_ui_edge_cases.py
