[build-system]
requires = ["setuptools >= 42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faster-whisper-hotkey"
version = "0.4.9"
description = "Push-to-talk transcription"
readme = "README.md"
authors = [{name = "blakkd"}]
license-files = ["LICENSE.txt"]
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX",
]

keywords = [
    "keyboard", "recognition", "voice", "typing", "speech",
    "shortcut", "speech-to-text", "hotkey", "stt", "asr",
    "faster-whisper", "whisper", "parakeet", "canary", "voxtral",
    "cohere", "granite",
]

# DEPENDENCIES
dependencies = [
    "sounddevice",
    "numpy",
    "faster-whisper",
    "pynput",
    "pulsectl",
    "torch",
    "torchaudio",
    "nemo-toolkit[asr]",
    "requests",
    "importlib_resources",
    "mistral-common[audio]",
    "transformers>=5.5.3",
    "bitsandbytes",
    "pyperclip",
    "soundfile",
    "librosa",
    "sentencepiece",
    "protobuf",
    "onnx==1.22.0",
    "accelerate"
]

# SCRIPTS
[project.scripts]
faster-whisper-hotkey = "faster_whisper_hotkey.__main__:main"

# SETUPTOOLS
[tool.setuptools]
packages = ["faster_whisper_hotkey"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
faster_whisper_hotkey = ["*.json"]

# RUFF
[tool.ruff.lint]
ignore = ["E402"]