[build-system]
requires = ["setuptools >= 42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faster-whisper-hotkey"
version = "0.4.9"
description = "Push-to-talk transcription"
readme = "README.md"
authors = [{name = "blakkd"}]
license-files = ["LICENSE.txt"]
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX",
]

keywords = [
    "keyboard", "recognition", "voice", "typing", "speech",
    "shortcut", "speech-to-text", "hotkey", "stt", "asr",
    "faster-whisper", "whisper", "parakeet", "canary", "voxtral",
    "cohere", "granite",
]

# DEPENDENCIES
dependencies = [
    "sounddevice==0.5.5",
    "numpy==2.2.6",
    "faster-whisper==1.2.1",
    "pynput==1.8.2",
    "pulsectl==24.12.0",
    "torch==2.12.1",
    "torchaudio==2.11.0",
    "nemo-toolkit[asr]==2.1.0",
    "requests==2.34.2",
    "importlib_resources==7.1.0",
    "mistral-common[audio]==1.11.3",
    "transformers==5.12.1",
    "bitsandbytes==0.45.3",
    "pyperclip==1.11.0",
    "soundfile==0.14.0",
    "librosa==0.11.0",
    "sentencepiece==0.2.1",
    "protobuf==5.29.6",
    "onnx==1.22.0",
    "accelerate==1.14.0",
]

# SCRIPTS
[project.scripts]
faster-whisper-hotkey = "faster_whisper_hotkey.__main__:main"

# SETUPTOOLS
[tool.setuptools]
packages = ["faster_whisper_hotkey"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
faster_whisper_hotkey = ["*.json"]

# RUFF
[tool.ruff.lint]
ignore = ["E402"]